...
            return "Map"
        case .search:
            return "Search"
        case .saved:
            return "Saved"
        case .more:
            return "More"
        }
    }
    
    var iconName: String {
        switch self {
        case .news:
...
